<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/employee"
        android:contentDescription="@string/text_label_employee"
        android:icon="@drawable/ic_train_24"
        android:title="@string/text_label_employee"/>

    <item
        android:id="@+id/route"
        android:icon="@drawable/ic_route_24"
        android:contentDescription="@string/text_label_routes"
        android:title="@string/text_label_routes"/>

    <item
        android:id="@+id/stop"
        android:icon="@drawable/ic_place_24"
        android:contentDescription="@string/text_label_stops"
        android:title="@string/text_label_stops"/>

</menu>